@@ -21,11 +21,13 @@ package org.apache.skywalking.oap.server.receiver.otel;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.reflect.ClassPath;
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import org.apache.skywalking.oap.server.core.analysis.meter.MeterSystem;
 import org.apache.skywalking.oap.server.core.server.GRPCHandlerRegister;
+import org.apache.skywalking.oap.server.library.module.ModuleStartException;
 
 public interface Handler {
     static List<Handler> all() throws HandlerInitializationException {
@@ -41,8 +43,8 @@ public interface Handler {
             Class<?> c = each.load();
             if (Arrays.stream(c.getInterfaces()).anyMatch(interfaceClass -> interfaceClass.isAssignableFrom(Handler.class))) {
                 try {
-                    result.add((Handler) c.newInstance());
-                } catch (InstantiationException | IllegalAccessException e) {
+                    result.add((Handler) c.getDeclaredConstructor().newInstance());
+                } catch (InstantiationException | IllegalAccessException | InvocationTargetException | NoSuchMethodException e) {
                     throw new HandlerInitializationException("failed to get instances of handler classed", e);
                 }
             }
@@ -52,7 +54,7 @@ public interface Handler {
 
     String type();
 
-    void active(List<String> enabledRules, MeterSystem service,
-        GRPCHandlerRegister grpcHandlerRegister);
-
+    void active(OtelMetricReceiverConfig config,
+                MeterSystem meterSystem,
+                GRPCHandlerRegister grpcHandlerRegister) throws ModuleStartException;
 }
